Added css styles for desktop devices

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="index.js"></script>
   
   <title>Frontend Mentor | FAQ Accordion Card</title>
 </head>
@@ -14,8 +15,7 @@
   <main class="container">
     <section class="illustration">
       <img src="./images/illustration-woman-online-mobile.svg" alt="illustration-mobile">
-      <!-- <img src="./images/illustration-woman-online-desktop.svg" alt="illustration-desktop"> -->
-      <!-- <img src="./images/illustration-box-desktop.svg" alt="illustration-box"> -->
+      <img src="./images/illustration-box-desktop.svg" alt="illustration-box">
     </section>
 
     <section class="faq">
