Fixing again  HTML validations

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
   <main class="container">
-    <section class="illustration">
+    <div class="illustration">
       <img src="./images/illustration-woman-online-mobile.svg" alt="illustration-mobile">
       <img src="./images/illustration-box-desktop.svg" alt="illustration-box">
-    </section>
+    </div>
 
     <section class="faq">
       <h2>faq</h2>
